fasto/fasto/tests/and_typeFail.err
Interpreter error: Bad type for right operand of &&: expected bool, but got int (5) at line 2, column 19