fasto/fasto/tests/and_typeFail.fo
fun bool main() =
    write(true && 5)